# geometry-lib

./: README.md  pyproject.toml
exceptions/: shape.py
geometry/: __init__.py  base.py  circle.py  factory.py  triangle.py
tests/: test_circle.py  test_factory.py  test_triangle.py
